fixed z-index on gregslist

--- a/unit_1/css_layout_challenge_gregslist/gregslist.css
+++ b/unit_1/css_layout_challenge_gregslist/gregslist.css
@@ -13,6 +13,8 @@ nav {
     border-bottom-color: black;
     border-bottom-style: solid;
     text-align: right;
+    z-index: 2;
+    
 }
 
 nav:hover {
@@ -54,7 +56,7 @@ nav>a {
 }
 
 .searchform {
-    position: absolute;
+    position: relative;
     display: inline-block;
     width: 400px;
     height: 30px;
@@ -118,6 +120,7 @@ button.next {
     left: 264px;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
+    top: 0px;
 }
 
 button.next::after {
@@ -125,7 +128,7 @@ button.next::after {
 }
 
 .searchindexbox {
-    position: absolute;
+    position: relative;
     left: 66px;
     height: 40px;
     width: 198px;
@@ -137,7 +140,7 @@ button.next::after {
 }
 
 .searchresults {
-    position: absolute;
+    position: relative;
     display: inline-block;
     left: 80px;
     top: 240px;
